--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,10 @@
     tools:context=".MainActivity">
 
     <com.urgentx.pizzapicker.PizzaPicker
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:ppColor="@color/colorAccent"
-        app:ppIconDrawable="@drawable/ic_android_blue_24dp" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:pp_color="@color/colorAccent"
+        app:pp_icon_drawable="@drawable/ic_android_blue_24dp"
+        app:pp_num_slices="5"/>
 
 </android.support.constraint.ConstraintLayout>
