--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,13 @@
     tools:context=".MainActivity">
 
     <com.urgentx.pizzapicker.PizzaPicker
+        android:id="@+id/pizza_picker"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:pp_color="@color/colorAccent"
         app:pp_num_slices="6" />
 
